--- a/src/main/resources/templates/dash_v2.html
+++ b/src/main/resources/templates/dash_v2.html
@@ -93,7 +93,7 @@ label {
 								<i class="fas fa-user"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 5px;">View/Edit
 								Profile</span>
-						</a> <a class="nav-link" href="/changepwd">
+						</a> <a class="nav-link" href="#">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 4px;">Change
@@ -118,16 +118,16 @@ label {
 				<div class="container-fluid">
 					<div class="card">
 						<div class="card-header">
-							<div class="row" style="margin-bottom:-12px;">
-								<div class="col-sm-4">
+							<div class="row" style="margin-bottom: -12px;">
+								<div class="col-md-4">
 									<h5>Home</h5>
 								</div>
-								<div class="col-sm-4" style="text-align: center;">
+								<div class="col-md-4" style="text-align: center;">
 									<h5>
 										Welcome <span th:text="${session.userDetails.firstName}"></span>
 									</h5>
 								</div>
-								<div class="col-sm-4">
+								<div class="col-md-4">
 									<p style="float: right;">
 										User Type: <span
 											th:text="${session.userDetails.userType}==2 ? 'External' : 'Internal'"></span>
@@ -137,91 +137,91 @@ label {
 
 						</div>
 						<div class="card-body">
-							<form>
+							<!-- --------------------------------------------------------- -->
 
-								<!-- --------------------------------------------------------- -->
-
-                                <div class="row"
-									style="padding-bottom: 16px;">
-									<label class="col-md-6">Please enter preferred name
-										with signature:</label> <input type="text" id="preferredNameId"
-										class="form-control col-md-5" placeholder="E-Signature Name">
+							<div class="row" style="padding-top: 16px; padding-bottom: 16px;">
+								<label class="col-md-6">Please enter preferred name with
+									signature:</label> <input type="text" id="preferredNameId"
+									class="form-control col-md-6" placeholder="E-Signature Name">
+							</div>
+							<div class="row">
+								<label class="col-md-6">Would you like to draw or upload
+									your signature ?</label>
+								<div class="col-md-6">
+									<input type="radio" id="drawOpt" name="signOption" value="draw">
+									<label for="draw">Draw</label> <input type="radio"
+										id="uploadOpt" name="signOption" value="upload"><label
+										for="upload">Upload</label>
 								</div>
-								<div class="row" style="padding-bottom: 16px;">
-									<label class="col-md-6">Would you like to draw or upload your signature?</label>
-									<div class="col-md-5">
-										<input type="radio" id="uploadOpt" name="signOption"
-											value="draw"><label for="email">Draw</label> <input
-											type="radio" id="drawOpt" name="signOption" value="upload">
-										<label for="phone">Upload</label>
+							</div>
+
+
+							<!--   ------------------------------------------------------------------ -->
+							<div id="drawContainer" class="container" style="display: none;">
+								<div>
+									<div id="signpad-ajax-msg" class="alert alert-dismissible"
+										style="display: none;">
+										<input type="button" class="close" data-dismiss="alert"
+											aria-hidden="true" value="x">
+										<p></p>
 									</div>
 								</div>
-								<!--   ------------------------------------------------------------------ -->
-								<div id="drawContainer" class="container" style="display: none;">
+								<div id="signpad-div" class="row signpad-padding">
 									<div>
-										<div id="signpad-ajax-msg" class="alert alert-dismissible"
-											style="display: none;">
-											<button type="button" class="close" data-dismiss="alert"
-												aria-hidden="true">×</button>
-											<p></p>
+										<h5>Please draw your signature</h5>
+										<div class="wrapper">
+											<canvas id="signature-pad" class="signature-pad" width="400"
+												height="200"></canvas>
 										</div>
-									</div>
-									<div id="signpad-div" class="row signpad-padding">
-										<div>
-											<h5>Please draw your signature</h5>
-											<div class="wrapper">
-												<canvas id="signature-pad" class="signature-pad" width="400"
-													height="200"></canvas>
-											</div>
-											<p class="imgActionBtns">
+										<p class="imgActionBtns">
 
-												<button class="btn btn-primary" id="save">Save</button>
-												<button class="btn btn-primary" id="clear">Clear</button>
-											</p>
-										</div>
+											<input type="button" class="btn btn-primary" id="save"
+												value="Save"> <input type="button"
+												class="btn btn-primary" id="clear" value="Clear">
+										</p>
 									</div>
 								</div>
-								<!-- ----------------------------------------------------------- -->
+							</div>
+							<!-- ----------------------------------------------------------- -->
 
-								<div id="uploadContainer" class="container"
-									style="display: none;">
+							<div id="uploadContainer" class="container"
+								style="display: none;">
+								<div>
+									<div id="upload-ajax-msg" class="alert alert-dismissible"
+										style="display: none;">
+										<input type="button" class="close" data-dismiss="alert"
+											aria-hidden="true" value="x">
+										<p></p>
+									</div>
+								</div>
+								<div class="row">
 									<div>
-										<div id="upload-ajax-msg" class="alert alert-dismissible"
-											style="display: none;">
-											<button type="button" class="close" data-dismiss="alert"
-												aria-hidden="true">×</button>
-											<p></p>
-										</div>
-									</div>
-									<div class="row">
-										<div>
-											<div id="uploadSignDiv">
-												<h5>Please upload your signature</h5>
-												<canvas id="testCanvas" width="400" height="250"
-													style="border: 1px solid black;">Your browser does not support canvas.</canvas>
-												<br />
-												<div id="fileSelectDiv">
+										<div id="uploadSignDiv">
+											<h5>Please upload your signature</h5>
+											<canvas id="testCanvas" width="400" height="250"
+												style="border: 1px solid black;">Your browser does not support canvas.</canvas>
+											<br />
+											<div id="fileSelectDiv">
 
-													<input type="file" id="signatureFile" onclick="click()"
-														onchange="handleFileSelect()"/>
-												</div>
-												<div class="imgActionBtns" id="buttons" >
-													<input type="button" onclick="cropper.startCropping()"
-														value="Start cropping" /> <input type="button"
-														onclick="cropper.getCroppedImageSrc()" value="Crop" /> <input
-														type="button" onclick="cropper.restore()" value="Restore" />
-												</div>
-												<input type="button" name="submitFile" id="upload"
-													class="form-control btn btn-primary"
-													value="Upload Signature" />
+												<input type="file" id="signatureFile"
+													onchange="handleFileSelect()" />
 											</div>
+											<div class="imgActionBtns">
+												<input type="button" onclick="cropper.startCropping()"
+													value="Start cropping" /> <input type="button"
+													onclick="cropper.getCroppedImageSrc()" value="Crop" /> <input
+													type="button" onclick="cropper.restore()" value="Restore" />
+											</div>
+											<input type="button" name="submitFile" id="upload"
+												class="form-control btn btn-primary"
+												value="Upload Signature" />
 										</div>
 									</div>
 								</div>
-								<!-- -------------------------------------------------------------- -->
+							</div>
+							<!-- -------------------------------------------------------------- -->
 
-								<!-- <button type="submit" class="btn btn-primary">Submit</button> -->
-							</form>
+							<!-- <button type="submit" class="btn btn-primary">Submit</button> -->
 						</div>
 					</div>
 				</div>
@@ -230,25 +230,21 @@ label {
 	</div>
 	<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		crossorigin="anonymous"></script> -->
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
+
 
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+		crossorigin="anonymous"></script>
+	<script
 		src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 	<script type="text/javascript" src="/js/cropper.js"></script>
 	<script>
-	$(document).ready(function() {
-	    $('#signatureFile').click(function() {
-	        $('#imgActionBtns').show();
-	    });
-	});	
 		
-	$(document).ready(function() {
+		$(document).ready(function() {
 			  $('input[type=radio][name="signOption"]').on('change', function() {
 				  if(this.value=="upload") {
 					  $('#uploadContainer').show();
@@ -266,7 +262,6 @@ label {
 			// this function will be called when the file input below is changed
 			var file = document.getElementById("signatureFile").files[0];  // get a reference to the selected file
 			
-			
 			var reader = new FileReader(); 
 			reader.onload = function(event) {
 				var data = event.target.result; // the "data url" of the image
@@ -280,11 +275,8 @@ label {
 		
 		var uploadBtn = document.getElementById('upload');
 		var myCanvas = document.getElementById("testCanvas");
-		
-		
 		// on click of Upload Button
 		uploadBtn.addEventListener('click', function(event) {
-			
 			event.preventDefault();
 			var dataURI = myCanvas.toDataURL();
 			var preferredNameUpload = $('#preferredNameId').val(); 
@@ -313,7 +305,16 @@ label {
 						$('#upload-ajax-msg').find("p").append("Error while saving signature. Please try again.");
 						$('#upload-ajax-msg').show();
 					}
-				}
+				},
+				error: function(data) {
+					$('#upload-ajax-msg').addClass('alert-danger');
+					$('#upload-ajax-msg').find("p").append("Error while saving signature. Please try again.");
+					$('#upload-ajax-msg').show();
+		            /*$(".message").text(returnval + " failure");
+		            $(".message").fadeIn("slow");
+		            $(".message").delay(2000).fadeOut(1000);*/
+		        }
+			
 			});
 			
 		});
@@ -354,7 +355,15 @@ label {
 							$('#signpad-ajax-msg').find("p").append("Error while saving signature. Please try again.");
 							$('#signpad-ajax-msg').show();
 						}
-					}
+					},
+					error: function(data) {
+						$('#signpad-ajax-msg').addClass('alert-danger');
+						$('#signpad-ajax-msg').find("p").append("Error while saving signature. Please try again.");
+						$('#signpad-ajax-msg').show();
+			            /*$(".message").text(returnval + " failure");
+			            $(".message").fadeIn("slow");
+			            $(".message").delay(2000).fadeOut(1000);*/
+			        }
 				});
 			});
 
