--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -62,18 +62,18 @@ h1 {
 
 				<div class="has-feedback">			
 			      <input type="text" class="form-control" id="validationCustom01" placeholder="First name"
-			        required><span class="glyphicon glyphicon-user form-control-feedback"></span>
+			        required><span class="glyphicon glyphicon-user form-control-feedback" th:field="*{firstName}"></span>
 			    </div>   <br>
 			    
 			    <div class="has-feedback">		    
 			      <input type="text" class="form-control" id="validationCustom02" placeholder="Last name"
-			        required><span class="glyphicon glyphicon-user form-control-feedback"></span>
+			        required><span class="glyphicon glyphicon-user form-control-feedback" th:field="*{lastName}"></span>
 			    </div>     <br>
 			        
 			    
 				<div class="has-feedback">			    
   				<input id="phonenum" class="form-control" type="tel" pattern="^\d{3}\d{3}\d{4}$" placeholder="Contact number (xxx-xxx-xxxx)" required >    
-				<span class="glyphicon glyphicon-earphone form-control-feedback"></span>
+				<span class="glyphicon glyphicon-earphone form-control-feedback" th:field="*{contactNo}"></span>
 				</div>	<br>
 
 
@@ -85,7 +85,7 @@ h1 {
 				
 				<div class="has-feedback">			    
   				<input type="password" id="inputValidationEx1" class="form-control validate" placeholder="Password" pattern="[A-Za-z]{8}" title="Eight letter Password">
-  				<span class="glyphicon glyphicon-lock form-control-feedback"></span>
+  				<span class="glyphicon glyphicon-lock form-control-feedback" th:field="*{password}" ></span>
 				<div class="requirements"> Must be a valid password!</div>
 		
 				</div> <br>
@@ -95,7 +95,7 @@ h1 {
 				
 				<div class="has-feedback">			    
   				<input type="password" id="inputValidationEx2" class="form-control validate" placeholder="Confirm Password" pattern="[A-Za-z]{8}" title="Eight letter Password">     
-				<span class="glyphicon glyphicon-lock form-control-feedback"></span>
+				<span class="glyphicon glyphicon-lock form-control-feedback" th:field="*{confirmPassword}"></span>
 				<div class="requirements"> Password should match!</div>
 				</div> <br>
 
@@ -103,7 +103,7 @@ h1 {
 				
 				<div class="has-feedback">
 			      <input type="text" class="form-control" id="validationCustom03" placeholder="Organization"
-			        required><span class="fa fa-building form-control-feedback"></span>
+			        required><span class="fa fa-building form-control-feedback" th:field="*{organization}"></span>
 			    </div>  
 				
 				<!-- <div class="form-group has-feedback"
