--- a/src/main/resources/templates/change_pwd.html
+++ b/src/main/resources/templates/change_pwd.html
@@ -98,7 +98,7 @@ label {
 		</div>
 		<div id="layoutSidenav_content">
 			<div class="container-fluid">
-				<h4>Change Password</h4>
+				<h4>Password Management</h4>
 				<div class="card">
 					<div class="card-header">
 						<div class="row">
@@ -109,35 +109,44 @@ label {
 						<!-- -------------------------------------------------------------- -->
 
 						<div class="col-md-8 col-md-offset-2">
-							<form class="form-horizontal" role="form"
-								th:action="@{/changepassword}" th:object="${editUserObj}" method="post">
+							<form class="form-horizontal" id="pwdForm" role="form">
+								<div id="ajax-msg" class="alert alert-dismissible"
+									style="display: none;">
+									<input type="button" class="close btn btn-sm"
+										data-dismiss="alert" aria-hidden="true" value="x">
+									<p></p>
+								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Current Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="txtPassword1" placeholder="password" pattern="[A-Za-z]{8}" title="Eight letter Password"
-											th:value="${editUserObj.currentPassword}" th:field="*{currentPassword}">
+										<input type="password" id="currentPwd"
+											placeholder="Current password">
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">New Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="txtPassword2" placeholder="password" pattern="[A-Za-z]{8}" title="Eight letter Password" 
-											th:value="${editUserObj.newPassword}" th:field="*{newPassword}">
+										<input type="password" id="newPwd"
+											placeholder="Password">
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Confirm Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="txtPassword3" placeholder="password" pattern="[A-Za-z]{8}" title="Eight letter Password" 
-											th:value="${editUserObj.confirmPassword}" th:field="*{confirmPassword}">
+										<input type="password" id="confirmPwd"
+											placeholder="Confirm Password">
 									</div>
-								
+
 								</div>
 								<div class="form-group" style="padding-top: 20px;">
 									<label class="col-lg-3 control-label"></label>
 									<div class="col-lg-8">
-										<input type="submit" class="btn btn-primary"
+										<input type="button" id="btnSubmit" class="btn btn-primary"
 											value="Save Changes">
+										<input
+											type="reset" class="btn btn-default" value="Cancel">
+									</div>
+								</div>
 							</form>
 
 						</div>
@@ -147,35 +156,65 @@ label {
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript">
-    $(function () {
-        $("#btnSubmit").click(function () {
-            var password = $("#txtPassword2").val();
-            var confirmPassword = $("#txtPassword3").val();
-            if (password != confirmPassword) {
-                alert("Passwords do not match.");
-                return false;
-            }
-            return true;
-        });
-    });
-</script>
-
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		crossorigin="anonymous"></script>
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
-	
-	<script>
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+	<script
+		src = "http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+	</script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script type="text/javascript">
-	
+	  
+	        $("#btnSubmit").click(function(e) {
+	        	e.preventDefault();
+	        	var current = $("#currentPwd").val();
+	            var password = $("#newPwd").val();
+	            var confirmPassword = $("#confirmPwd").val();
+	           if (password != confirmPassword) {
+	                alert("Passwords do not match.");
+	            }
+	           else{
+	        	   //ajax call here 
+	        	   var data ={
+							currentPwd : current,
+							newPwd : password
+					};
+					$.ajax({
+						type : "POST",
+						data :JSON.stringify(data),
+						contentType : "application/json",
+					    url : "changepwd",
+						cache : false,
+						success : function(data) {
+							console.log(data);
+							if(data == "Success") {
+								console.log("success block");
+								window.location.href = "/login?success";
+								
+							}
+							else{
+								console.log("else block");
+								$('#ajax-msg').addClass('alert-danger');
+								$('#ajax-msg').find("p").html("Current password does not match with the records.");
+								$('#ajax-msg').show();
+							}
+						},
+						error: function(data) {
+							console.log(data);
+							console.log("error block");
+							$('#ajax-msg').addClass('alert-danger');
+							$('#ajax-msg').find("p").html("Failed to update password changes.");
+							$('#ajax-msg').show();
+				        }
+					});
+	           }
+	            
+	        });
 	</script>
 </body>
 </html>
-				
-				
+
