--- a/src/main/resources/templates/dash_v4.html
+++ b/src/main/resources/templates/dash_v4.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
@@ -78,15 +78,16 @@ label {
 }
 
 #result {
-	height: 250px;
-	width: 400px;
+	height: 300px;
 	background-color: #ffffff;
 	cursor: default;
-	border: 1px solid black;
+	border: 2px solid black;
+	display: block;
+	width: 100%;
 }
 
 .previewDiv {
-	padding-top:11px;
+	padding-top: 11px;
 }
 
 #uploadImg {
@@ -169,7 +170,7 @@ label {
 
 						</div>
 						<div class="card-body">
-							---------------------------------------------------------
+							<!-- --------------------------------------------------------- -->
 
 							<div class="row" style="padding-top: 16px; padding-bottom: 16px;">
 								<label class="col-md-6">Please enter preferred name with
@@ -188,7 +189,7 @@ label {
 							</div>
 
 
-							  ------------------------------------------------------------------
+							<!--   ------------------------------------------------------------------ -->
 							<div id="drawContainer" class="container" style="display: none;">
 								<div>
 									<div id="signpad-ajax-msg" class="alert alert-dismissible"
@@ -214,7 +215,7 @@ label {
 									</div>
 								</div>
 							</div>
-							-----------------------------------------------------------
+							<!-- ----------------------------------------------------------- -->
 
 							<div id="uploadContainer" class="container"
 								style="display: none;">
@@ -228,18 +229,20 @@ label {
 								</div>
 								<div class="row" style="padding-top: 22px;">
 									<div class="uploadDiv col-md-6">
-										<div class="row" style="padding-bottom: 15px; padding-left: 14px;">
-											Below are a series of inputs which allow file selection and interaction with the cropper api
+										<div class="row"
+											style="padding-bottom: 15px; padding-left: 14px;">
+											<!-- Below are a series of inputs which allow file selection and interaction with the cropper api -->
 											<input type="file" id="fileInput" accept="image/*" />
 										</div>
-										
+
 										<div>
 											<canvas id="canvas">Your browser does not support the HTML5 canvas element.</canvas>
 										</div>
-										<div class="row"
-											style="padding-top: 10px; padding-bottom: 10px;">
+										<div class="row" id="imgActionBtns"
+											style="padding-top: 10px; padding-bottom: 10px; display: none;">
 											<div class="col-sm-3">
-												<button class="btn btn-sm btn-primary" id="btnCrop">
+												<button class="btn btn-sm btn-primary" id="btnCrop"
+													data-target="#cropmodal" data-toggle="modal">
 													<i class="fa fa-crop"></i> Crop
 												</button>
 											</div>
@@ -250,30 +253,50 @@ label {
 											</div>
 										</div>
 										<input type="button" name="submitFile" id="upload"
-												class="form-control btn btn-primary"
-												value="Upload Signature" />
+											style="display: none;" class="form-control btn btn-primary"
+											value="Upload Signature" />
 									</div>
-									<div class="previewDiv col-md-6">
-										<h5>Preview</h5>
-										<div id="result"></div>
+
+								</div>
+							</div>
+
+							<div id="cropmodal" class="modal fade" tabindex="-1"
+								role="dialog" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<h3 style="text-align: center;">Preview signature</h3>
+										<div>
+											<div>
+												<div class="text-center">
+													<div id="result"></div>
+												</div>
+											</div>
+										</div>
+										<br>
+
+										<button class="btn btn-sm btn-primary"
+											style="text-align: center;" data-dismiss="modal"
+											aria-hidden="true">Close</button>
+										<br>
+
 									</div>
 								</div>
 							</div>
-							--------------------------------------------------------------
+							<!-- -------------------------------------------------------------- -->
 
-							<button type="submit" class="btn btn-primary">Submit</button>
+							<!-- <button type="submit" class="btn btn-primary">Submit</button> -->
 						</div>
 					</div>
 				</div>
 			</main>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script> -->
 
 
-	<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!--<script
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script
@@ -296,6 +319,10 @@ label {
 					  $('#drawContainer').show();
 					  $('#uploadContainer').hide();
 				  }
+				$("#cropmodal").draggable({
+				      handle: ".modal-dialog"
+				  });  
+				
 			  });
 			});
 		// CROPPER SCRIPT
@@ -324,6 +351,8 @@ label {
 		$result = $("#result");
 
 		$("#fileInput").on("change", function(e) {
+			$('#imgActionBtns').show();
+			$('#upload').show();
 		  if (this.files && this.files[0]) {
 		    var reader = new FileReader();
 		    reader.onload = function (evt) {
@@ -465,6 +494,6 @@ label {
 		</script>
 
 
-	-----------------------------------------------------------------------------------------------------------------------------------------------
+	<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
 </body>
-</html> -->
+</html>
